--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,20 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="축하합니다"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <!-- Open Graph general -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="🙋‍준모🩷지혜🙋‍♀️" />
+    <meta
+            property="og:description"
+            content="과연 뭐가 나올까...." />
+    <meta property="og:image" content="https://junmo-jihye.netlify.app/og_img.webp" />
+    <meta property="og:image:type" content="image/webp" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="1024" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>🙋‍준모🩷지혜🙋‍♀️</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
