--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="🙋‍준모🩷지혜🙋‍♀️" />
     <meta
             property="og:description"
-            content="과연 뭐가 나올까...." />
+            content="행복해라~" />
     <meta property="og:image" content="https://junmo-jihye.netlify.app/og_img.webp" />
     <meta property="og:image:type" content="image/webp" />
     <meta property="og:image:width" content="1024" />
